# py-autovod

./: .env.example  pyproject.toml
src/: settings.py  utils.py
tests/: test_utils.py
