[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autovod"
version = "1.2.0"
description = "Automatically download livestreams, clip with AI, and upload in realtime"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "0jc1", email = "52017130+0jc1@users.noreply.github.com" }]
dependencies = [
  "loguru>=0.7.0",
  "numpy<2.4",
  "openai>=2.21.0",
  "openai-whisper",
  "faster-whisper",
  "yt-dlp>=2026.2.21",
  "requests>=2.32.0",
  "python-dotenv>=1.2.0",
  "soundfile>=0.13.0",
  "pydub>=0.25.0",
  "torch",
  "torchaudio",
  "torchvision",
  "librosa>=0.11.0",
  "tqdm>=4.67.0",
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Video :: Capture",
  "Topic :: Internet",
]
keywords = [
  "livestream",
  "kick",
  "autovod",
  "automation",
  "ai",
  "clipper",
  "ffmpeg",
  "streamlink",
  "twitch",
  "youtube"
]

[project.optional-dependencies]
dev = [
  "black",
  "pytest",
  "ruff",
  "build",
  "loguru",
  "dotenv",
]
test = [
    "pytest",
    "loguru",
    "dotenv",
    "responses",
]

[project.urls]
Repository = "https://github.com/0jc1/py-autovod"
Issues = "https://github.com/0jc1/py-autovod/issues"
Documentation = "https://github.com/0jc1/py-autovod#readme"
Changelog = "https://github.com/0jc1/py-autovod/releases"

[project.scripts]
autovod = "main:main"

[tool.black]
skip-magic-trailing-comma = true
